Fix header spacing

--- a/admin/client/css/main.less
+++ b/admin/client/css/main.less
@@ -518,7 +518,6 @@ a:hover {color: @link-color-hover;text-decoration:none;}
 //Classes to create equal column
 .inside {margin-top: 20px;margin-bottom: 20px;background: #ededed;background: -webkit-gradient(linear, left top, left bottom,color-stop(0%, #f4f4f4), color-stop(100%, #ededed));background: -moz-linear-gradient(top, #f4f4f4 0%, #ededed 100%);background: -ms-linear-gradient(top, #f4f4f4 0%, #ededed 100%);}
 .inside-full-height {height: 100%;margin-top: 0;margin-bottom: 0;}
-.content {padding: 12px 3px;}
 .row-height {display: table;table-layout: fixed;height: 100%;width: 100%;}
 .col-height {display: table-cell;float: none;height: 100%;}
 .col-top {vertical-align: top;}
